SERVER-62458 Fix deadlock in FCBIS _cloneFiles

GitOrigin-RevId: c0512f09e311e3657e3e2d5554e60dc1b454b6e6